--- a/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
+++ b/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
@@ -12,12 +12,19 @@
     <div class="card-container overflow-hidden">
         <div class="flex">
             <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2 px-5 py-3 border-round">
-                <div class="flex-row align-items-center justify-content-center font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 700px">
+                <div class="flex-row align-items-center justify-content-center m-2 border-round" style="min-width: 80%; min-height: 700px">
                     <div class="flex align-items-start justify-content-center m-2 border-round" style="min-width: 80%; min-height: 500px">
                         <p-chart type="pie" [data]="data" width="40vw" height="60vh" [options]="options"></p-chart>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-yellow-500 font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 200px">
-                        Hello
+                    <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 100%; min-height: 200px">
+                        <div class="flex-row m-2 border-round" style="min-width: 55%; min-height: 200px">
+                            <div class="flex align-items-center justify-content-center font-bold m-2 border-round blockBg" style="min-width: 55%; min-height: 200px">
+                                Hello
+                            </div>
+                            <div class="flex align-items-center justify-content-center border-round" style="min-width: 55%; min-height: 50px">
+                                <img src="assets\img\icon\chain.png" height="35" width="35" class="mr-2">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
