--- a/src/app/blockchain-evote/user/home-page/home-page.component.html
+++ b/src/app/blockchain-evote/user/home-page/home-page.component.html
@@ -12,7 +12,11 @@
 <div class="card">
     <div class="card-container yellow-container overflow-hidden">
         <div class="flex">
-            <div class="flex align-items-center justify-content-center font-bold px-2 py-3 text-3xl ml-2">รายการกิจกรรม</div>
+            <div class="flex align-items-center justify-content-center font-bold px-2 py-3 text-3xl ml-2">
+                <div class="headerFont">
+                    รายการกิจกรรม
+                </div>
+            </div>
             <div class="flex align-items-end justify-content-center px-2 py-3 text-1xl">เฉพาะกิจกรรมของคุณ</div>
         </div>
     </div>
