--- a/src/app/blockchain-evote/user/regis-status/regis-status.component.html
+++ b/src/app/blockchain-evote/user/regis-status/regis-status.component.html
@@ -56,7 +56,9 @@
                     <div class="flex align-content-start justify-content-center flex-wrap card-container green-container" style="height: 90%">
                         <div class="flex align-items-center border-3 border-blue-300 justify-content-center font-bold m-1" style="min-width: 95%; min-height: 50px">
                             <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 50px">
-                                ประวัติผลการลงสมัคร
+                                <div class="headerFont">
+                                    ประวัติผลการลงสมัคร
+                                </div>
                             </div>
                         </div>
                         <div class="flex align-items-center justify-content-center border-bottom-1 m-1" style="min-width: 95% ; min-height: 30px">
