--- a/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
+++ b/src/app/blockchain-evote/admin/votingscore-admin/votingscore-admin.component.html
@@ -18,8 +18,30 @@
                     </div>
                     <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 100%; min-height: 200px">
                         <div class="flex-row m-2 border-round" style="min-width: 55%; min-height: 200px">
-                            <div class="flex align-items-center justify-content-center font-bold m-2 border-round blockBg" style="min-width: 55%; min-height: 200px">
-                                Hello
+                            <div class="flex-row font-bold m-2 border-round blockBg" style="min-width: 100%; min-height: 200px">
+                                <div class="flex align-items-center justify-content-center font-bold m-3 border-round" style="min-width: 55%; min-height: 150px">
+                                    ข้อมูล :
+                                    <div class="flex align-items-center justify-content-start font-bold m-3 border-round bg-white" style="min-width: 85%; min-height: 150px">
+                                        <div class="text-lg" style="margin-left: 1rem;">
+                                            ผู้ลงเลือกตั้ง :
+                                            <br>เบอร์พรรค :
+                                            <br>ผู้ลงคะแนน :
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flex-row align-items-start justify-content-start font-bold m-2 border-round" style="min-width: 80%; min-height: 220px">
+                                    <div style="margin: 1rem;">
+                                        Previous Hash &nbsp;
+                                        <input type="text" pInputText value="000510d5fc2d82c7c5f0f74d101d26ffd57e772a6c0b2a8ff7678abaad9fe687" [style]="{width: '100%'}" disabled/>
+                                    </div>
+                                    <div style="margin: 1rem;">
+                                        Current Hash &nbsp;
+                                        <input type="text" pInputText value="000510d5fc2d82c7c5f0f74d101d26ffd57e772a6c0b2a8ff7678abaad9fe687" [style]="{width: '100%'}" disabled/>
+                                    </div>
+                                    <div class="" style="margin: 1rem;">
+                                        BLOCK#1 Timestamp
+                                    </div>
+                                </div>
                             </div>
                             <div class="flex align-items-center justify-content-center border-round" style="min-width: 55%; min-height: 50px">
                                 <img src="assets\img\icon\chain.png" height="35" width="35" class="mr-2">
