--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -59,12 +59,15 @@
                             <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-start border-round mt-2" style="min-width: 200px; min-height: 75px">
                                     <i class="pi pi-check-circle" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block text-xl"><b>สถานะการเลือกตั้ง : เปิดโหวต</b></label>
+                                    <label for="Number" class="block text-xl"><b>สถานะการเลือกตั้ง : </b></label>
+                                    <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
+                                        <p-inputSwitch></p-inputSwitch>
+                                    </div>
                                 </div>
                             </div>
                             <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 140px; min-height: 5px">
-                                    <p-button label="ตรวจสอบผลคะแนน" icon="pi pi-check" (onClick)="goToVotingScore()"></p-button>
+                                    <p-button label="ตรวจสอบผลคะแนน" icon="pi pi-check" (onClick)="goToVotingScore()" [style]="{width: '100%'}"></p-button>
                                 </div>
                                 <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 60px; min-height: 5px">
                                 </div>
