--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -94,7 +94,7 @@
                                                     {{students.faculty}}
                                                 </td>
                                                 <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="จัดการผู้มีสิทธิ์" style="width: 100%;"></button>
+                                                    <button pButton type="button" class="p-button buttonColor" label="จัดการผู้มีสิทธิ์" style="width: 100%;" (click)="addRemoveVoter()"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -145,7 +145,7 @@
                                                     {{students.faculty}}
                                                 </td>
                                                 <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="จัดการผู้มีสิทธิ์" style="width: 100%;"></button>
+                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
