--- a/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
@@ -1,4 +1,4 @@
-<app-menu-bar></app-menu-bar>
+<app-menu-bar-admin></app-menu-bar-admin>
 <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true" [showItemNavigators]="true" [showThumbnails]="false">
     <ng-template pTemplate="item" let-item>
         <img [src]="item.previewImageSrc" style="width: 70%; display: block;" />
