fetch api firstupdate

--- a/src/app/blockchain-evote/admin/manage-election-admin/manage-election-admin.component.html
+++ b/src/app/blockchain-evote/admin/manage-election-admin/manage-election-admin.component.html
@@ -1,5 +1,4 @@
-<app-menu-bar>
-</app-menu-bar>
+<app-menu-bar-admin></app-menu-bar-admin>
 <div class="card">
     <div class="card-container overflow-hidden">
         <div class="flex">
