--- a/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
@@ -57,10 +57,9 @@
         <div class="flex">
             <div class="flex align-items-center justify-content-center font-bold px-2 py-3 text-3xl ml-2">
                 <div class="headerFont">
-                    รายการกิจกรรม
+                    รายการกิจกรรมที่เปิดโหวตอยู่
                 </div>
             </div>
-            <div class="flex align-items-end justify-content-center px-2 py-3 text-1xl">เฉพาะกิจกรรมของคุณ</div>
         </div>
     </div>
 </div>
