--- a/src/app/blockchain-evote/auth/log-in/log-in.component.html
+++ b/src/app/blockchain-evote/auth/log-in/log-in.component.html
@@ -16,7 +16,7 @@
         <div class="field">
             <span class="p-input-icon-left" [style]="{'width': '100%'}">
                         <i class="pi pi-lock"></i>
-                        <input type="text" pInputText placeholder="รหัสผ่าน" [style]="{'width': '100%'}" [(ngModel)]="password"/>
+                        <input type="password" pInputText placeholder="รหัสผ่าน" [style]="{'width': '100%'}" [(ngModel)]="password"/>
                     </span>
         </div>
         <ng-template pTemplate="footer">
