--- a/src/app/blockchain-evote/user/home-page/home-page.component.html
+++ b/src/app/blockchain-evote/user/home-page/home-page.component.html
@@ -23,16 +23,30 @@
 </div>
 <div class="card">
     <div class="flex flex-wrap card-container" style="max-width: 100%">
-        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px">
-            <p-card header="Advanced Card" subheader="Card Subheader" [style]="{width: '360px'}" styleClass="p-card-shadow">
+        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
+            <p-card header="{{elec.election.elecName}}" [style]="{width: '360px'}" styleClass="p-card-shadow">
                 <ng-template pTemplate="header">
                     <img alt="Card" src="assets/showcase/images/usercard.png">
                 </ng-template>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
+                <p>
+                    {{elec.election.elecDetail}}
                 </p>
+                <div style="margin-top: 1rem">
+                    <b>
+                        <p>
+                            เริ่มต้น : {{elec.election.elecStartdate}}
+                        </p>
+                        <p>
+                            สิ้นสุด : {{elec.election.elecEnddate}}
+                        </p>
+                        <p>
+                            ผู้ลงสมัคร :
+                        </p>
+                    </b>
+                </div>
+
                 <ng-template pTemplate="footer">
-                    <p-button label="Save" icon="pi pi-check" (onClick)="goToVotePage()"></p-button>
-                    <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{'margin-left': '.5em'}"></p-button>
+                    <p-button label="ลงคะแนน" (onClick)="goToVotePage()" [style]="{width: '100%'}"></p-button>
                 </ng-template>
             </p-card>
         </div>
