--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -10,7 +10,7 @@
                                 <div class="field">
                                     <label for="Number" class="block text-xl"><b>ชื่อหัวข้อการเลือกตั้ง : </b></label>
                                     <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px; min-height: 50px">
-                                        <label for="Number" class="block"><b>ประยุทธ์ต้องชนะ </b></label>
+                                        <label for="Number" class="block">{{election.elecName}}</label>
                                     </div>
                                 </div>
                             </div>
@@ -20,7 +20,7 @@
                                 <div class="field">
                                     <label for="Number" class="block text-xl"><b>รายละเอียดการเลือกตั้ง : </b></label>
                                     <div class="flex align-items-center justify-content-start border-round" style="min-width: 200px; min-height: 50px">
-                                        <label for="Number" class="block"><b>ประยุทธ์ต้องชนะ </b></label>
+                                        <label for="Number" class="block">{{election.elecDetail}}</label>
                                     </div>
                                 </div>
                             </div>
@@ -47,13 +47,13 @@
                             <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>เริ่มต้น : 15/03/2544</b></label>
+                                    <label for="Number" class="block"><b>เริ่มต้น : {{election.elecStartdate}}</b></label>
                                 </div>
                             </div>
                             <div class="flex flex-wrap card-container blue-container border-round border-300" style="max-width: 100%;background-color: #FFFAE5;">
                                 <div class="flex align-items-center justify-content-center border-round" style="min-width: 200px; min-height: 50px">
                                     <i class="pi pi-clock" style="font-size: 1rem;margin-right: 5px;"></i>
-                                    <label for="Number" class="block"><b>สิ้นสุด : 15/03/2544</b></label>
+                                    <label for="Number" class="block"><b>สิ้นสุด : {{election.elecEnddate}}</b></label>
                                 </div>
                             </div>
                             <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
@@ -83,45 +83,22 @@
         <div class="flex flex-wrap border-round m-2 justify-content-center">
             <p-panel header="รายชื่อผู้ลงสมัคร">
                 <div class="flex flex-wrap card-container align-items-center justify-content-start">
-                    <div class="flex m-2">
-                        <p-card header="Advanced Card" subheader="Card Subheader" [style]="{width: '340px'}" styleClass="p-card-shadow">
+                    <div class="flex m-2" *ngFor="let candidate of candidateList">
+                        <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
                             <ng-template pTemplate="header">
-                                <img alt="Card" src="assets/showcase/images/usercard.png">
+                                <img alt="Card" src="\assets\img\candidate.png" height="280">
                             </ng-template>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-                                quas!
-                            </p>
+                            <div class="flex align-items-center justify-content-center">
+                                ชื่อผู้ลงสมัคร : {{candidate.candidate.candiName}} {{candidate.candidate.candiLastname}}
+                            </div>
+                            <div class="flex align-items-center justify-content-center">
+                                เบอร์ : {{candidate.candidate.candiNo}}
+                            </div>
+                            <div class="flex align-items-center justify-content-center">
+                                พรรค : {{candidate.candidate.candiParty}}
+                            </div>
                             <ng-template pTemplate="footer">
-                                <p-button label="Save" icon="pi pi-check"></p-button>
-                                <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{'margin-left': '.5em'}"></p-button>
-                            </ng-template>
-                        </p-card>
-                    </div>
-                    <div class="flex m-2">
-                        <p-card header="Advanced Card" subheader="Card Subheader" [style]="{width: '340px'}" styleClass="p-card-shadow">
-                            <ng-template pTemplate="header">
-                                <img alt="Card" src="assets/showcase/images/usercard.png">
-                            </ng-template>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-                                quas!
-                            </p>
-                            <ng-template pTemplate="footer">
-                                <p-button label="Save" icon="pi pi-check"></p-button>
-                                <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{'margin-left': '.5em'}"></p-button>
-                            </ng-template>
-                        </p-card>
-                    </div>
-                    <div class="flex m-2">
-                        <p-card header="Advanced Card" subheader="Card Subheader" [style]="{width: '340px'}" styleClass="p-card-shadow">
-                            <ng-template pTemplate="header">
-                                <img alt="Card" src="assets/showcase/images/usercard.png">
-                            </ng-template>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-                                quas!
-                            </p>
-                            <ng-template pTemplate="footer">
-                                <p-button label="Save" icon="pi pi-check"></p-button>
-                                <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{'margin-left': '.5em'}"></p-button>
+                                <button pButton type="button" class="p-button buttonColor" label="ลงคะแนน" [style]="{width: '100%'}"></button>
                             </ng-template>
                         </p-card>
                     </div>
