--- a/src/app/blockchain-evote/user/home-page/home-page.component.scss
+++ b/src/app/blockchain-evote/user/home-page/home-page.component.scss
@@ -11,3 +11,15 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+.buttonColor {
+    background: #05A4A9;
+    border-radius: 5px;
+    border-color: #05A4A9;
+}
+
+.buttonColor:hover {
+    background: #039396;
+    border-radius: 5px;
+    border-color: #039396;
+}
