--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 140px; min-height: 5px">
-                                    <p-button label="ตรวจสอบผลคะแนน" icon="pi pi-check" (onClick)="goToVotingScore()" [style]="{width: '100%'}"></p-button>
+                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบผลคะแนน" icon="pi pi-check" [style]="{width: '100%'}" (click)="goToVotingScore()"></button>
                                 </div>
                                 <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 60px; min-height: 5px">
                                 </div>
