--- a/src/app/blockchain-evote/auth/log-in/log-in.component.html
+++ b/src/app/blockchain-evote/auth/log-in/log-in.component.html
@@ -10,7 +10,7 @@
         <div class="field" style="margin-bottom: 3vh;">
             <span class="p-input-icon-left" [style]="{'width': '100%'}">
                         <i class="pi pi-user"></i>
-                        <input type="text" pInputText placeholder="บัญชีผู้ใช้งาน" [style]="{'width': '100%'}" [(ngModel)]="studentId"/>
+                        <input type="text" pInputText placeholder="บัญชีผู้ใช้งาน" [style]="{'width': '100%'}" [(ngModel)]="studentCode"/>
                     </span>
         </div>
         <div class="field">
