--- a/src/app/blockchain-evote/user/register/reg-memconcil/reg-memconcil.component.html
+++ b/src/app/blockchain-evote/user/register/reg-memconcil/reg-memconcil.component.html
@@ -29,7 +29,7 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="prefix" class="block">คำนำหน้าชื่อ</label>
-                                    <input id="prefix" type="text" pInputText />
+                                    <input id="prefix" type="text" pInputText [(ngModel)]="studentData.prefix" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -37,19 +37,19 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="firstname" class="block">ชื่อ</label>
-                                    <input id="firstname" type="text" pInputText />
+                                    <input id="firstname" type="text" pInputText [(ngModel)]="studentData.firstName" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="lastname" class="block">นามสกุล</label>
-                                    <input id="lastname" type="text" pInputText />
+                                    <input id="lastname" type="text" pInputText [(ngModel)]="studentData.lastName" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="age" class="block">อายุ</label>
-                                    <input id="age" type="number" pInputText />
+                                    <input id="age" type="number" pInputText [(ngModel)]="studentAge" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -57,19 +57,19 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="birthday" class="block">วันเดือนปีเกิด</label>
-                                    <p-calendar inputId="birthday"></p-calendar>
+                                    <p-calendar inputId="birthday" [(ngModel)]="studentData.birthday" disabled="true"></p-calendar>
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="national" class="block">สัญชาติ</label>
-                                    <input id="national" type="text" pInputText />
+                                    <input id="national" type="text" pInputText [(ngModel)]="studentData.nationality" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="religion" class="block">ศาสนา</label>
-                                    <input id="religion" type="text" pInputText />
+                                    <input id="religion" type="text" pInputText [(ngModel)]="studentData.religion" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -77,25 +77,25 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 90px; min-height: 100px">
                                 <div class="field">
                                     <label for="housenumber" class="block">บ้านเลขที่</label>
-                                    <input id="housenumber" type="text" pInputText style="width: 90px;" />
+                                    <input id="housenumber" type="text" pInputText style="width: 95px;" [(ngModel)]="studentData.studentAddress.addHouse" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 90px; min-height: 100px">
                                 <div class="field">
                                     <label for="mu" class="block">หมู่ที่</label>
-                                    <input id="mu" type="text" pInputText style="width: 90px;" />
+                                    <input id="mu" type="text" pInputText style="width: 95px;" [(ngModel)]="studentData.studentAddress.addVillage" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="street" class="block">ถนน</label>
-                                    <input id="street" type="text" pInputText />
+                                    <input id="street" type="text" pInputText [(ngModel)]="studentData.studentAddress.addStreet" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="township" class="block">แขวง/ตำบล</label>
-                                    <input id="township" type="text" pInputText />
+                                    <input id="township" type="text" pInputText [(ngModel)]="studentData.studentAddress.addSubDis" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -103,19 +103,19 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="districts" class="block">เขต/อำเภอ</label>
-                                    <input id="districts" type="text" pInputText />
+                                    <input id="districts" type="text" pInputText [(ngModel)]="studentData.studentAddress.addDistrict" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="province" class="block">จังหวัด</label>
-                                    <input id="province" type="text" pInputText />
+                                    <input id="province" type="text" pInputText [(ngModel)]="studentData.studentAddress.addProvince" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="post" class="block">รหัสไปรษณีย์</label>
-                                    <input id="post" type="text" pInputText />
+                                    <input id="post" type="text" pInputText [(ngModel)]="studentData.studentAddress.addPostCode" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -123,13 +123,13 @@
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="phone" class="block">หมายเลขโทรศัพท์</label>
-                                    <input id="phone" type="text" pInputText />
+                                    <input id="phone" type="text" pInputText [(ngModel)]="studentData.phoneNo" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="oriProvince" class="block">ภูมิลำเนาเดิมจังหวัด</label>
-                                    <input id="oriProvince" type="text" pInputText />
+                                    <input id="oriProvince" type="text" pInputText [(ngModel)]="studentData.studentAddress.addOriprovince" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -145,19 +145,19 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="faculty" class="block">คณะ</label>
-                                    <input id="faculty" type="text" pInputText />
+                                    <input id="faculty" type="text" pInputText [(ngModel)]="studentData.studentFaculty" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รหัสนักศึกษา</label>
-                                    <input id="studentID" type="text" pInputText />
+                                    <input id="studentID" type="text" pInputText [(ngModel)]="studentData.studentCode" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="classYear" class="block">ชั้นปี</label>
-                                    <input id="classYear" type="text" pInputText />
+                                    <input id="classYear" type="text" pInputText [(ngModel)]="studentData.studentClassyear" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -165,13 +165,13 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="faculty" class="block">สาขาวิชา</label>
-                                    <input id="faculty" type="text" pInputText />
+                                    <input id="faculty" type="text" pInputText [(ngModel)]="studentData.studentMajor" disabled="true" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ขึ้นทะเบียนนักศึกษาเมื่อปี</label>
-                                    <input id="studentID" type="text" pInputText />
+                                    <input id="studentID" type="text" pInputText [(ngModel)]="studentData.studentRegisYear" disabled="true" />
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="gpa" class="block">คะแนนเฉลี่ยสะสม</label>
-                                    <input id="gpa" type="text" pInputText />
+                                    <input id="gpa" type="text" pInputText [(ngModel)]="studentData.studentGpa" disabled="true" />
                                 </div>
                             </div>
                         </div>
