--- a/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
+++ b/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
@@ -13,9 +13,9 @@
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
-                                <div class="field">
+                                <div class="field" [formGroup]="regisForm">
                                     <label for="Number" class="block">หมายเลข</label>
-                                    <input id="Number" type="text" pInputText [(ngModel)]="candidateNo" />
+                                    <input id="Number" type="text" pInputText formControlName="candidateNo" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
@@ -188,17 +188,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 1</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText [(ngModel)]="position1" />
+                                    <input id="studentID" type="text" pInputText formControlName="position1" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar [(ngModel)]="pYear1" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear1" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -207,17 +207,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 2</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText [(ngModel)]="position2" />
+                                    <input id="studentID" type="text" pInputText formControlName="position2" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar [(ngModel)]="pYear2" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear2" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -226,17 +226,17 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 3</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText [(ngModel)]="position3" />
+                                    <input id="studentID" type="text" pInputText formControlName="position3" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar [(ngModel)]="pYear3" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear3" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -248,21 +248,27 @@
                                 <label for="exp" class="block"><b>รูปภาพ</b></label>
                             </div>
                         </div>
+                        <div *ngIf="displayPic" class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-center justify-content-left m-2 border-round" style="min-width: 200px; min-height: 100px">
+                                <img [src]="imageSrc" id="photo" [style]="{width: '180px',height: '200px'}">
+                            </div>
+                        </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-left m-2 border-round" style="min-width: 200px; min-height: 100px">
-                                <p-fileUpload mode="basic" name="demo[]" accept="image/*" [customUpload]="true" chooseLabel="Browse"></p-fileUpload>
+                                <p-fileUpload #upload mode="basic" name="image" accept="image/*" chooseLabel="เลือกรูปภาพ" (onSelect)="onSelect($event)">
+                                </p-fileUpload>
                             </div>
                         </div>
                         <!---->
 
                         <!-- Button -->
-                        <div class="card">
-                            <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
-                                <div class="flex align-items-center justify-content-center border-round" style="min-width: 100%; min-height: 50px">
-                                    <div style="margin-right: 1rem;">
-                                        <button pButton pRipple type="button" label="ลงทะเบียน" class="p-button-raised p-button-success" (click)="register()"></button>
+                        <div class=" card ">
+                            <div class="flex flex-wrap card-container blue-container " style="max-width: 100% ">
+                                <div class="flex align-items-center justify-content-center border-round " style="min-width: 100%; min-height: 50px ">
+                                    <div style="margin-right: 1rem; ">
+                                        <button pButton pRipple type="button " label="ลงทะเบียน" class="p-button-raised p-button-success " (click)="register()"></button>
                                     </div>
-                                    <button pButton pRipple type="button" label="ยกเลิก" class="p-button-raised p-button-danger" style="width: 107px;"></button>
+                                    <button pButton pRipple type="button" label="ล้างข้อมูล" class="p-button-raised p-button-danger " style="width: 107px; " (click)="refresh(upload)"></button>
                                 </div>
                             </div>
                         </div>
