--- a/src/app/blockchain-evote/user/home-page/home-page.component.html
+++ b/src/app/blockchain-evote/user/home-page/home-page.component.html
@@ -34,10 +34,10 @@
                 <div style="margin-top: 1rem">
                     <b>
                         <p>
-                            เริ่มต้น : {{elec.election.elecStartdate}}
+                            เริ่มต้น : {{elec.election.elecStartdate | formatDate}}
                         </p>
                         <p>
-                            สิ้นสุด : {{elec.election.elecEnddate}}
+                            สิ้นสุด : {{elec.election.elecEnddate | formatDate}}
                         </p>
                         <p>
                             ผู้ลงสมัครทั้งหมด : {{elec.election.countCandi}} คน
