--- a/src/app/blockchain-evote/user/register/register.component.html
+++ b/src/app/blockchain-evote/user/register/register.component.html
@@ -34,10 +34,10 @@
                 <div style="margin-top: 1rem">
                     <b>
                         <p>
-                            เริ่มต้น : {{elec.elecStartdate}}
+                            เริ่มต้น : {{elec.elecStartdate | formatDate}}
                         </p>
                         <p>
-                            สิ้นสุด : {{elec.elecEnddate}}
+                            สิ้นสุด : {{elec.elecEnddate | formatDate}}
                         </p>
                     </b>
                 </div>
