--- a/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
+++ b/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
@@ -2,7 +2,7 @@
 <div class="card">
     <div class="card-container overflow-hidden">
         <div class="flex">
-            <div class="flex-1 flex align-items-center justify-content-center m-2 px-5 py-3 border-round">
+            <div class="flex-1 flex align-items-center justify-content-center m-2">
                 <p-panel header="ใบลงทะเบียนนายกสโมสร">
                     <div class="card">
                         <!-- ข้อมูลส่วนตัว -->
