--- a/src/app/blockchain-evote/user/voting-score/voting-score.component.html
+++ b/src/app/blockchain-evote/user/voting-score/voting-score.component.html
@@ -14,11 +14,11 @@
             <div class="flex-1 flex flex-wrap align-items-center justify-content-center m-2 px-5 py-3 border-round">
                 <div class="flex-row align-items-center justify-content-center font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 700px">
                     <div class="flex align-items-start justify-content-center m-2 border-round" style="min-width: 80%; min-height: 500px">
-                        <p-chart type="pie" [data]="data" width="40vw" height="60vh" [options]="options"></p-chart>
+                        <p-chart type="bar" [data]="chartData" [options]="options" width="40vw" height="60vh"></p-chart>
                     </div>
-                    <!-- <div class="flex align-items-center justify-content-center bg-yellow-500 font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 200px">
+                    <div class="flex align-items-center justify-content-center bg-yellow-500 font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 200px">
                         Hello
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
