--- a/src/app/blockchain-evote/user/regis-status/regis-status.component.html
+++ b/src/app/blockchain-evote/user/regis-status/regis-status.component.html
@@ -4,7 +4,7 @@
         <div class="flex align-items-center justify-content-center h-4rem"></div>
     </div>
     <div class="card">
-        <div class="flex justify-content-center border-transparent align-items-center flex-wrap card-container">
+        <div class="flex justify-content-center border-transparent align-items-center flex-wrap-reverse                                                          card-container">
             <div class="flex justify-content-center font-bold surface-border surface-overlay border-3 border-round text-gray-900 m-2" style="width: 650px;height: 609px;">
                 <div class="card">
                     <div class="flex justify-content-center flex-wrap card-container yellow-container" style="min-height: 300px">
@@ -51,9 +51,9 @@
                 </div>
             </div>
 
-            <div class="flex justify-content-center surface-border surface-overlay border-3 border-round text-gray-900 m-2" style="width: 330px;height: 609px;">
+            <div class="flex justify-content-center surface-border surface-overlay border-3 border-round m-2" style="width: 330px;height: 610px;">
                 <div class="card">
-                    <div class="flex align-content-start justify-content-center flex-wrap card-container green-container" style="height: 90%">
+                    <div class="flex align-content-start justify-content-center flex-wrap" style="max-height: 100%">
                         <div class="flex align-items-center border-3 border-blue-300 justify-content-center font-bold m-1" style="min-width: 95%; min-height: 50px">
                             <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 50px">
                                 <div class="headerFont">
@@ -61,22 +61,24 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="flex align-items-center justify-content-center border-bottom-1 m-1" style="min-width: 95% ; min-height: 30px">
-                            <div class="flex align-items-center justify-content-start border-round m-1" style="min-width: 70%; min-height: 30px">
-                                ใบสมัครสมาชิกสภานักศึกษา
+                        <p-scrollPanel [style]="{width: '100%', height: '460px'}">
+                            <div *ngFor="let election of electionList" class="flex align-items-center justify-content-center border-bottom-1 m-1" style="min-width: 100% ; min-height: 30px">
+                                <div class="flex align-items-center justify-content-start m-1" style="min-width: 75%; min-height: 30px">
+                                    {{election.elecName}}
+                                </div>
+                                <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 20%;min-height: 30px">
+                                    <img src="assets\img\status_no.png" height="20" width="20">
+                                </div>
                             </div>
-                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 20%;min-height: 30px">
-                                <img src="assets\img\status_no.png" height="20" width="20">
-                            </div>
-                        </div>
+                        </p-scrollPanel>
                     </div>
-                    <div class="flex align-content-start justify-content-center flex-wrap card-container green-container" style="height: 10%">
-                        <div class="flex align-items-center justify-content-center border-2 border-gray-200 m-1" style="min-width: 95% ; min-height: 30px">
+                    <div class="flex align-content-start justify-content-center flex-wrap " style="height: 10%">
+                        <div class="flex align-items-center justify-content-center border-2 border-gray-200 m-1" style="min-width: 95% ; min-height: 60px">
                             <div class="flex align-items-center justify-content-start border-round m-1" style="min-width: 70%; min-height: 30px">
                                 รายการลงสมัครทั้งหมด
                             </div>
                             <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 20%;min-height: 30px">
-                                15 รายการ
+                                {{electionList.length}} รายการ
                             </div>
                         </div>
                     </div>
