--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -77,11 +77,12 @@
         </div>
     </div>
 
-    <div class="card-container overflow-hidden" style="max-width: 100%">
-        <div class="flex flex-wrap border-round m-2 justify-content-center">
+
+    <div class="flex align-items-center justify-content-center">
+        <div class="card-container overflow-hidden" style="min-width: 100%">
             <p-panel header="รายชื่อผู้ลงสมัคร">
-                <div class="flex flex-wrap card-container align-items-center justify-content-start">
-                    <div class="flex m-2" *ngFor="let candidate of candidateList">
+                <div class="flex flex-wrap card-container align-items-center justify-content-center">
+                    <div class="flex m-2 card-container" style="max-width: 100%" *ngFor="let candidate of candidateList">
                         <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
                             <ng-template pTemplate="header">
                                 <div class="flex align-items-center justify-content-center">
